# fsmanifestinfo.bzl

./: .gitmodules  BUILD.bazel  MODULE.bazel  README.md  fsmanifestinfo.bzl
examples/java/: .bazelrc  Application.java  BUILD.bazel  JsonProcessor.java  MODULE.bazel  SimpleJsonProcessor.java  SimpleStringUtils.java  StringUtils.java  app.properties  maven_install.json
examples/java/config/: app.config
examples/java/converter/: converter.bzl
examples/java/resources/: README.txt
examples/python/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  application.py  defs.bzl  json_processor.py  requirements.txt  requirements_lock.txt  string_utils.py
examples/python/config/: app.config
examples/python/foobar/baz/: BUILD.bazel  __init__.py
examples/python/foobar/baz/qux/: __init__.py
examples/python/resources/: README.txt
fsmanifest/: BUILD.bazel  README.md  defs.bzl  fsmanifestinfo.bzl  remap.bzl
fsmanifest/private/: BUILD.bazel  fsmanifestinfo.bzl
private/: BUILD.bazel  metadata.bzl
private/providers/: BUILD.bazel  fsmanifestinfo.bzl
