load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "fsmanifestinfo",
    srcs = ["fsmanifestinfo.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [":fsmanifestinfo"],
    visibility = ["//visibility:public"],
)

exports_files([
    "fsmanifestinfo.bzl",
    "defs.bzl",
])