load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("@rules_img//img:image.bzl", "image_manifest")
load("@rules_img//img:push.bzl", "image_push")
load("//converter:converter.bzl", "converter")

# Library for JSON processing using Gson (third-party dependency)
java_library(
    name = "json_lib",
    srcs = ["JsonProcessor.java"],
    deps = [
        "@maven//:com_google_code_gson_gson",
    ],
)

# Utility library using Guava (third-party dependency)
java_library(
    name = "utils_lib",
    srcs = ["StringUtils.java"],
    deps = [
        "@maven//:com_google_guava_guava",
    ],
)

# Main application binary with real third-party dependencies
# Demonstrates:
# - Multiple java_library dependencies
# - External Maven dependencies (Guava, Gson, SLF4J, Commons CLI)
# - Data files (config and resources)
# - Proper layer separation (platform/external/application)
java_binary(
    name = "application",
    srcs = ["Application.java"],
    main_class = "examples.java.Application",
    data = [
        "config/app.config",
        "resources/README.txt",
    ],
    deps = [
        ":json_lib",
        ":utils_lib",
        "@bazel_tools//tools/java/runfiles",
        "@maven//:com_google_guava_guava",
        "@maven//:commons_cli_commons_cli",
        "@maven//:org_slf4j_slf4j_api",
    ],
    runtime_deps = [
        "@maven//:org_slf4j_slf4j_simple",
    ],
)

converter(
    name = "application_converter",
    binary = ":application",
    main_class = "examples.java.Application",
)

# Container image with FSManifestInfo demonstrating layer separation
# External layer: Maven dependencies (Guava, Gson, SLF4J, etc.)
# Application layer: Application code, config, and resources
image_manifest(
    name = "application_image",
    base = "@distroless_java",  # Distroless Java base image with JVM
    layers = [
        ":application_converter",  # FSManifestInfo expands to categorized layers
    ],
    # Layer order: external deps, then application code
    fsmanifest_layer_order = ["external", "application"],
    config_fragment = ":application_converter",
)

# Push target for deploying to registry
image_push(
    name = "push",
    image = ":application_image",
    registry = "ghcr.io",
    repository = "malt3/fsmanifest-java-demo",
    tag = "latest",
)
