module(name = "python_example")

# Define fsmanifestinfo as a local module
bazel_dep(name = "fsmanifestinfo.bzl", version = "0.1.0")
local_path_override(
    module_name = "fsmanifestinfo.bzl",
    path = "../..",
)

# Python toolchain - use local modified version
bazel_dep(name = "rules_python", version = "1.0.0")
local_path_override(
    module_name = "rules_python",
    path = "../../submodules/rules_python",
)

# Image rules - use local modified version
bazel_dep(name = "rules_img")
local_path_override(
    module_name = "rules_img",
    path = "../../submodules/rules_img",
)

# Platform definitions
bazel_dep(name = "platforms", version = "0.0.8")

# Skylib for bzl_library
bazel_dep(name = "bazel_skylib", version = "1.5.0")

# Python interpreter setup
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)
use_repo(python, "python_3_11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "distroless_python",
    digest = "sha256:d6e8de85caaf94601d4391ee94fb299c059789eafc8a54d5f232c8ccc6e9603b",
    registry = "gcr.io",
    repository = "distroless/python3-debian12",
    tag = "latest",
)
